# ChangeLog for app-admin/puppet
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.45 2009/09/04 16:07:20 matsuu Exp $

*puppet-0.25.0_rc1-r1 (04 Sep 2009)

  04 Sep 2009; MATSUU Takuto <matsuu@gentoo.org>
  +puppet-0.25.0_rc1-r1.ebuild, +files/puppet-0.25.init,
  +files/puppetmaster-0.25.init:
  Fixed init.d scripts for filepath issue.

  29 Aug 2009; nixnut <nixnut@gentoo.org> puppet-0.24.8-r1.ebuild:
  ppc stable #270432

  27 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  puppet-0.24.8-r1.ebuild:
  stable x86, bug 270432

*puppet-0.25.0_rc1 (25 Aug 2009)

  25 Aug 2009; MATSUU Takuto <matsuu@gentoo.org> +puppet-0.25.0_rc1.ebuild:
  Version bumped, bug #280364.

  21 Jul 2009; MATSUU Takuto <matsuu@gentoo.org> -puppet-0.24.7-r1.ebuild,
  -puppet-0.24.8.ebuild, puppet-0.24.8-r1.ebuild, files/puppet.init,
  files/puppetmaster.init:
  Removed ruby19 from USE_RUBY, bug #276788. Added localmount, netmount and
  nfsmount to init script, bug #278593. Removed old versions.

  19 May 2009; Ferris McCormick <fmccor@gentoo.org> puppet-0.24.8-r1.ebuild:
  Sparc stable, Bug #270432.

*puppet-0.24.8-r1 (19 Apr 2009)

  19 Apr 2009; Benedikt Böhm <hollow@gentoo.org>
  +files/puppet-0.24.8-rc-update-show.patch, puppet-0.24.8.ebuild,
  +puppet-0.24.8-r1.ebuild:
  identify services with ambiguous suffixes correctly

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> puppet-0.24.8.ebuild:
  Add ~sparc keyword, bug #263526

  07 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> puppet-0.24.4.ebuild,
  puppet-0.24.7-r1.ebuild, puppet-0.24.8.ebuild:
  Fixed HOMEPAGE, bug #264950.

  06 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> puppet-0.24.8.ebuild:
  virtual/ruby[ssl] -> dev-lang/ruby[ssl]

*puppet-0.24.8 (03 Apr 2009)

  03 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> metadata.xml,
  +puppet-0.24.8.ebuild:
  Version bumped, bug #263526. Added augeas and shadow USE flag.
