@@ -8,9 +8,8 @@ AUX puppetmaster-0.25.init 1006 RMD160 9b1878992fc0380cbacf7c1eada2e6a283749a26 
 AUX puppetmaster.confd 279 RMD160 64824fc2c88d9069b25d0548fac5981f1ff4fa6b SHA1 d521616310e7a27986c27138bd4d4382238d609a SHA256 6db68d9e093d3d231c8ad35968e8d276f68cdd7aec8577b3f7ac2998d1f91692
 AUX puppetmaster.init 1005 RMD160 eca4418abb7b6de674e7580f949b27f73b3c9b59 SHA1 3efa92e55e7f1df55d384b59b36704f6a0ee42d8 SHA256 c3a658b778d89084fa8a21b477c7caf77f59e82bb1bef8c8086afed533da5a3a
 DIST puppet-0.24.8.tgz 1099188 RMD160 edb187da9225c9faee9839a5d644b5c9c91f3d5f SHA1 a871aef6f3e8e060f5109bb022967066e32875be SHA256 9e9dcfdd26f96e0b0b4ca9bcfe6f473c679ff082a0cd7226c2058ae652d4fdc8
-DIST puppet-0.25.0rc1.tar.gz 1391184 RMD160 aae58abf32210a85be6c8d0b1936d1118d837d7b SHA1 159fd33368727a2b090c300414fbdd847c159ec2 SHA256 197037212db27e6a91b392d9ac38474c9fb0ac4db0c65e54e460b4bf6c411dfd
-EBUILD puppet-0.24.8-r1.ebuild 3647 RMD160 c7bd3210b5dfdd30d86b5e3d68d31045c0459177 SHA1 09c3d8a222272972fa8debdda464326d5ed7c195 SHA256 30eb983d19eae80e2ec355545a59cd6e856bdc303f71567f99a0db2c8c499c15
-EBUILD puppet-0.25.0_rc1-r1.ebuild 3648 RMD160 18e9a5205562b682a03146d97c12222dfbbe6f2e SHA1 fcf9a027f19040dedaa7603b363b77c790b3a7ac SHA256 9a644579efd71f704c55a86975195ef4b3068b6609fae00b70be906249af74ea
-EBUILD puppet-0.25.0_rc1.ebuild 3635 RMD160 2216e08248af7bc12d75f5deec22684ff192c078 SHA1 5e9c8721f7bd45977e610b95a385b26e9740efac SHA256 dc2ef5f393597c74c1b4a6af3405b6bc5956fbb92d0a7903ee606b3d11526f66
-MISC ChangeLog 8478 RMD160 1246730690e1072171e7dadd0e421cb7c9b777b4 SHA1 2c72b244a4fb499f707736b4bf4f6917030317da SHA256 9e7e5bfb0b2a56eeff41aadc6ea7fafc468ead96e3ce7ac0176dd1bec7d872fb
+DIST puppet-0.25.0.tar.gz 1405924 RMD160 eef9e5200959eb5f62c1d0419957158fcd2821ce SHA1 8396103deb91b6d8008d9df10422a7f70071c1bf SHA256 d7ac3dc1cb2d74e99b662b02599e5d045c3d34d4e16bb8f6686b899440443a3b
+EBUILD puppet-0.24.8-r1.ebuild 3647 RMD160 59eb1ba191a341ad754ef795794e40a1eec0201a SHA1 51aad2189fc4e7113bf988b323cc8d0901a92371 SHA256 3b0b8397fa29355c1c6ea5986e8ad8ad62039def3979878abeb32bfdd95e3095
+EBUILD puppet-0.25.0.ebuild 3641 RMD160 41d616787db3e93a9a09a12e030aaa55df033019 SHA1 428e416ee116375a925abc20e369f1fb4c78e103 SHA256 5d650aac3f2b6f429e3478a9c3172b1a5b320c354af7c25f2cf7a4d686d20f97
+MISC ChangeLog 8898 RMD160 19361e55dce8d92b0dbcf2d195e868c3df03e7bd SHA1 cc9a39e2217706c12da3946a64d3bbc7744359f6 SHA256 48e54cbfd46a221caec9f27779f33cce3f12699d1451a540cad6c0eb14e72450
 MISC metadata.xml 1104 RMD160 c2e40f737c1f334d2d4e7a34e1dba61b53ebdfff SHA1 ab42f340e0d8add11e9c4cd6c6791f3cc5ec6484 SHA256 c228b29cc44ea8fe2545f43d05688bc6364395adf7cf2d86290d25e86207fefb
