@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/puppet-0.24.8-r1.ebuild,v 1.5 2009/08/29 17:50:11 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/puppet-0.24.8-r1.ebuild,v 1.6 2009/09/05 22:21:54 maekke Exp $
 
 EAPI="2"
 inherit elisp-common eutils ruby
